--- a/package.json
+++ b/package.json
@@ -12,5 +12,24 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
-  }
+  },
+    "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "dotenv": "^8.1.0",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2"
+  },
+    "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "Nathan Standage",
+  "license": "MIT",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": ""
 }
